<resources>
    <string name="app_name">Movie App</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_poster_zoom">Movie Poster Detail</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="plot">Plot</string>
    <string name="sort">Sort</string>
    <string name="popular">Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="API">YOUR_API_KEY_HERE</string>
    <string name="reviews">Reviews</string>
    <string name="trailer">View Trailer</string>
    <string name="play">Play</string>
    <string name="favoriteButton">Favorite</string>
    <string name="unfavorite">Remove favorite</string>
    <string name="favorites">Favorite Movies</string>

</resources>
