<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_poster_zoom"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/rating"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@+id/full_poster"
            app:layout_constraintTop_toBottomOf="@id/movie_poster" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@+id/full_poster"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <ImageView
            android:id="@+id/full_poster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="@id/movie_poster"
            app:layout_constraintTop_toTopOf="@id/movie_poster"
            android:contentDescription="@string/movie_poster"/>


        <TextView
            android:id="@+id/plot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:text="@string/plot"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/full_poster"
            android:gravity="center"/>

        <TextView
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/reviews"
            app:layout_constraintTop_toBottomOf="@+id/plot"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="16sp"
             />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailerRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/reviews" />

        <Button
            android:id="@+id/favButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/favoriteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>